changed firebase target to platin-bm

--- a/.firebaserc
+++ b/.firebaserc
@@ -32,6 +32,9 @@
         "platin-vr": [
           "platin-vr-com-0"
         ],
+        "platin-bm": [
+          "platin-vm-com"
+        ],
         "rhodium-iv": [
           "rhodium-iv-com-0"
         ],
