fixed typo for platin-bm-com firebase app

--- a/.firebaserc
+++ b/.firebaserc
@@ -33,7 +33,7 @@
           "platin-vr-com-0"
         ],
         "platin-bm": [
-          "platin-vm-com"
+          "platin-bm-com"
         ],
         "rhodium-iv": [
           "rhodium-iv-com-0"
